--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 carpentry: "swc"
 
 # Overall title for pages.
-title: "Workshop Title"
+title: "VUMC Software Carpentry 2017"
 
 # Contact email address.
-email: lessons@software-carpentry.org
+email: chris.fonnesbeck@vanderbilt.edu
 
 #------------------------------------------------------------
 # Generic settings (should not need to change).
